--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>cookieTestSite</title>
+    <title>cookieWeb</title>
     <link rel="stylesheet" href="page.css"> 
 </head>
 <body style="background-color: black;" text="white">
@@ -53,4 +53,5 @@
     <p class = "myText8">Click image to access my scratch profile</p>
     <p class = myText0>This website is made by <span style="color: red;"><b><span style="font-family: 'Lucida Console', monospace;">COOKIE DEVELOPMENTS</span></b></span>.</p>
     </body>
+
 </html>
